# django-unfold-modal

./: .gitignore  LICENSE  README.md  playwright.config.js  pyproject.toml
.github/workflows/: ci.yml
django_unfold_modal/: __init__.py  apps.py  urls.py  utils.py  views.py
django_unfold_modal/static/django_unfold_modal/css/: related_modal.css
django_unfold_modal/static/django_unfold_modal/js/: modal_core.js  popup_iframe.js  related_modal.js
django_unfold_modal/templates/admin/: base_site.html  popup_response.html
django_unfold_modal/templatetags/: unfold_modal.py
plans/: IMMUTABLE_BASE_PLAN.md
reviews/: feat-t01-test-infrastructure__T01.md  feat-t02-package-scaffold__T02.md  feat-t03-modal-js__T03-fixes.md  feat-t03-modal-js__T03.md  feat-t05-admin-template__T05.md  feat-t06-pytest-cases__T06.md  feat-t07-playwright-ui__T07.md  feat-t08-prepare-unfold-extra__T08.md  feat-t09-nested-models__T09.md  feat-t10-modal-stack__T10.md  feat-t11-nested-playwright__T11.md  feat-t12-modal-resize__T12.md  feat-t13-modal-ux__T13.md  feat-t13b-modal-ux-followup__T13b.md  feat-t13c-modal-ux-final__T13c.md  feat-t14-related-modal-refactor__T14.md  feat-t14a-modal-refactor-followup__T14a.md  feat-t14c-remove-important-css__T14c.md  feat-t14d-dark-mode-tokens__T14d.md  feat-t14e-unfold-token-alignment__T14e.md  feat-t15-unused-code-cleanup__T15.md  feat-t15a-model-test-slimming__T15a.md  feat-t16-disable-admin-header__T16.md  feat-t17-tailwind-css-refactor__T17.md  feat-t20-rename-package__T20.md  feat-t20a-dist-name-alignment__T20a.md  feat-t21-cms-sideframe-modal__T21.md  feat-t21-cms-sideframe-modal__T21a.md  feat-t21-cms-sideframe-modal__T21b.md  feat-t22-hide-popup-add-link__T21c.md  feat-t22-hide-popup-add-link__T22.md  feat-t22-hide-popup-add-link__T22a.md
scripts/: opencode_coder.sh  opencode_review.sh
tasks/: T01_test_infrastructure.md  T02_package_scaffold.md  T03_modal_js.md  T04_popup_response_template.md  T04b_popup_lookup_rawid.md  T05_admin_template_injection.md  T06_pytest_cases.md  T07_playwright_ui.md  T08_refactor_prepare_unfold_extra.md  T08b_remove_enabled_setting.md  T09_nested_models_for_modal.md  T10_modal_stack_replace.md  T10_nested_modal_playwright.md  T11_modal_resize_options.md  T11_nested_modal_playwright.md  T12_drawer_presentation.md  T12_modal_resize_options.md  T13_drawer_presentation.md  T13_modal_title_maximize_resize_stack.md  T13b_modal_ux_followup.md  T13c_modal_ux_followup.md  T14_related_modal_refactor.md  T14_tailwind_css_refactor.md  T14a_related_modal_refactor_followup.md  T14b_related_modal_event_invariants.md  T14c_remove_important_css.md  T14d_dark_mode_variables_playwright.md  T14e_unfold_token_alignment.md  T15_drawer_presentation.md  T15_tailwind_css_refactor.md  T15_unused_code_cleanup.md  T15a_model_test_slimming.md  T16_disable_admin_header_in_modal.md  T16_drawer_presentation.md  T16_tailwind_css_refactor.md  T16a_disable_header_selector_rules.md  T17_drawer_presentation.md  T17_tailwind_css_refactor.md  T17a_remove_inject_styles.md  T18_docs_readme_updates.md  (+12 more)
tests/: README.md  conftest.py  test_cms_head.py  test_csrf.py  test_modal_config.py  test_package.py  test_permissions.py  test_popup.py  test_smoke.py  test_ui_cms_modal.py  test_ui_dark_mode.py  test_ui_header_suppression.py  test_ui_iframe_host.py  test_ui_modal.py  test_ui_modal_size.py  test_ui_modal_ux.py  test_ui_nested_modal.py
tests/server/: manage.py
tests/server/testapp/: admin.py  models.py  settings.py  urls.py
tests/server/testapp/migrations/: 0001_initial.py  0002_country_city_venue_event.py  0003_delete_profile.py
unfold_modal/: __init__.py  apps.py  urls.py  utils.py  views.py
unfold_modal/static/unfold_modal/css/: modal.css
unfold_modal/static/unfold_modal/js/: cms_host.js  modal_core.js  popup_iframe.js  related_modal.js
unfold_modal/templates/unfold/helpers/: add_link.html
unfold_modal/templatetags/: unfold_modal_tags.py
